app/src/main/java/com/gdavidpb/test/domain/usecase/errors/GetTrackPreviewError.kt
package com.gdavidpb.test.domain.usecase.errors

sealed class GetTrackPreviewError {
    object IO : GetTrackPreviewError()
    class NoConnection(val isNetworkAvailable: Boolean) : GetTrackPreviewError()
}